--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -8,7 +8,7 @@
     <section class="timerSect">
       <div class="timeContainer">
         <div id="timeTitle">
-          <a>TIMER</a>
+          <h3>TIMER</h3>
         </div>
         <div id="timerFrame">
           <div class="timer">
@@ -16,8 +16,8 @@
           </div>
         </div>
         <div class="timerBtns">
-          <button id="startBtn" type="button">START</button>
-          <button id="stopBtn"  type="button">STOP</button>
+          <button id="startBtn" type="button">Start</button>
+          <button id="stopBtn"  type="button">Stop</button>
         </div>
       </div>
     </section>
