--- a/views/partials/exercise-details.handlebars
+++ b/views/partials/exercise-details.handlebars
@@ -1,14 +1,14 @@
-        <div id="exerTitle">
-          <h2>{{EXERCISE.NAME}}</h2>
-        </div>
-        <div class="exerData">
-          <div class="exerSRep">
-          <a>Sets left: {{SETS}}</a>
-          <a>Reps left: {{REPS}}</a>
-          </div>
-          <div class="exerImg">
-            <p>IMAGE</p>
-          <img src="">
-          </div>
-        </div>
+<div id="exerTitle">
+  <h2>{{EXERCISE.NAME}}</h2>
+</div>
+<div class="exerData">
+  <div class="exerSRep">
+    <a class="SRepBox">Sets left: {{SETS}}</a>
+    <a class="SRepBox">Reps left: {{REPS}}</a>
+  </div>
+  <div class="exerImg">
+    <p>IMAGE</p>
+    <img src="">
+  </div>
+</div>
       
