--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
     <div id="logSignEl">
       <nav>
         {{#if logged_in}}
-        <button class="no-button" id="logout">logout</button>
+        <button class="no-button" id="logout">Logout</button>
         {{else}}
         <a id="signUpNav" href="/signup">Sign Up</a>
         {{/if}}
@@ -28,6 +28,9 @@
     </div>
   </header>
   {{{body}}}
+  <footer>
+    
+  </footer>
 </body>
   {{#if logged_in}}
   <script src="./js/logout.js"></script>
