--- a/views/workouthistory.handlebars
+++ b/views/workouthistory.handlebars
@@ -1,3 +1,4 @@
+<main class="wkHistMain">
 {{#each userwkouts as |userwkout|}}
   <section class="wkOutHistSect">
     <div id="wkOutHistContainer">
@@ -11,3 +12,4 @@
     </div>
   </section>
 {{/each}}
+</main>
