--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,7 +16,7 @@
     </section>
   {{/each}}
     <section class="wkHistSect">
-      <a href="api/workoutHistory">
+      <a href="api/workouthistory">
       <div class="navWkHist">
         <div class="routinenName">
           <h2>Workout History</h2>
@@ -25,3 +25,5 @@
       </a>
     </section>
 </main>
+
+<script src="/js/index.js" type="text/javascript"></script>
