--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
         <div class="routinenName">
           <h2 id="routName">{{routine.routineName}}</h2>
         </div>
-        <div id="routDesc" style="display: none;" >
+        <div id="routDesc">
             <p>DESCRIPTION OF WORKOUT</p>
         </div>
       </div>
