--- a/views/partials/workouthistory-details.handlebars
+++ b/views/partials/workouthistory-details.handlebars
@@ -1,11 +1,11 @@
   <section class="wkOutHistSect">
     <div id="wkOutHistContainer">
       <div id="exercDate">
-        <h3>8/18/2023</h3>
+        <h3>{{date}}</h3>
       </div>
       <div id="exercList">
-        <h3>Routine</h3>
-        <p>exercise1<br>exercise2<br>exercise3</p>
+        <h3>{{routines.routineName}}</h3>
+        <p>{{exercises.workoutName}}<br>{{exercises.workoutName}}<br>{{exercises.workoutName}}</p>
       </div>
     </div>
   </section>
