--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,7 +238,7 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
 .wkoutRout {
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;;
   align-items: center;
   background-repeat: no-repeat;
   background-size: 810px 340px;
@@ -252,7 +252,7 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
 
 .wkoutRout:hover {
 
-  filter: brightness(60%);
+  filter: brightness(110%);
 
 }
 
@@ -263,15 +263,36 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
 
 }
 
-/*.routinenName {
+.routinenName {
 
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 150px;
-  width: 500px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #ff723f;
+  border: 1px solid #b9512b;
+  border-radius: 5px;
+  box-shadow: 8px 8px 10px #858585;
+  text-align: center;
+  margin-top: -25px;
+  height: 50px;
+  width: 310px;
 
-}*/
+}
+
+#routDesc {
+
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #efefef;
+  border: 2px solid #b9512b;
+  border-radius: 5px;
+  box-shadow: 8px 8px 10px #858585;
+  text-align: center;
+  margin-top: 40px;
+  height: 100px;
+  width: 510px;
+
+}
 
 .wkHistSect {
 
@@ -283,7 +304,6 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
 
   display: flex;
   justify-content: center;
-  align-items: center;
   background-repeat: no-repeat;
   background-size: 810px 300px;
   border: 1px solid #858585;
@@ -296,7 +316,7 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
 
 .navWkHist:hover {
 
-  filter: brightness(60%);
+  filter: brightness(110%);
 
 }
 
@@ -389,8 +409,10 @@ padding-top: 20px;
 
 #exerImg {
 
+  border-radius: 5px;
   height: 240px;
   width: 200px;
+  box-shadow: 8px 8px 10px #858585, rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 
 }
 
