--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -40,7 +40,7 @@
     <button id="nextBtn" type="button">Next Workout</button>
   </div>
   {{/each}}
-  <div id="navBtns">
+  <div id="navBtnsFinish">
     <button id="finishBtn" type="button">Finish Now</button>
   </div>
 </main>
