--- a/views/partials/workouthistory-details.handlebars
+++ b/views/partials/workouthistory-details.handlebars
@@ -1,10 +1,10 @@
   <section class="wkOutHistSect">
     <div id="wkOutHistContainer">
       <div id="exercDate">
-        <h3>{{date}}</h3>
+        <h3>{{ format_date date}} </h3>
       </div>
       <div id="exercList">
-        <h3>{{routines.routineName}}</h3>
+        <h3>{{wrkOutRoutine.routineName}}</h3>
         <p>{{exercises.workoutName}}<br>{{exercises.workoutName}}<br>{{exercises.workoutName}}</p>
       </div>
     </div>
