--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -15,10 +15,8 @@
           <img id="exerImg" src="{{exercise.photo_link}}" alt="{{exercise.photo_link}}" />
         </div>
       </div>
-
     </div>
   </section>
-
   <section class="timerSect">
     <div class="timeContainer">
       <div id="timeTitle">
@@ -26,7 +24,7 @@
       </div>
       <div id="timerFrame">
         <div class="timer">
-          <a>{{exercise.countdownDuration}}</a>
+          <a id="countDown">{{exercise.countdownDuration}}</a>
         </div>
       </div>
       <div class="timerBtns">
