--- a/views/workouthistory.handlebars
+++ b/views/workouthistory.handlebars
@@ -3,3 +3,6 @@
   {{> workouthistory-details userwkout}}
   {{/each}}
 </main>
+<div id="homeNav">
+  <a id="homeBtn" href="/">Home Page</a>
+</div>
