--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -1,4 +1,8 @@
 <main class="exerMain">
+  {{#ifCond exercises}}
+  <h2>Great Workout!</h2>
+  <button id="finishBtnFinal" type="button">Finish</button>
+  {{/ifCond}}
   {{#each exercises as |exercise| }}
   <section class="exerSect">
     <div class="exerBox">
@@ -26,23 +30,24 @@
       </div>
       <div id="timerFrame">
         <div class="timer">
-          <a>{{exercise.countdownDuration}}</a>
+          {{ speak exercise.countdownDuration}}
+          <div id="clock">{{exercise.countdownDuration}}</div>
+          
         </div>
       </div>
       <div class="timerBtns">
         <button id="startBtn" type="button">Start</button>
         <button id="stopBtn" type="button">Stop</button>
+        <script src="/js/clock.js"></script>
       </div>
     </div>
     </div>
   </section>
   <div id="navBtns">
     <button id="nextBtn" type="button">Next Workout</button>
-  </div>
-  {{/each}}
-  <div id="navBtnsFinish">
     <button id="finishBtn" type="button">Finish Now</button>
   </div>
+  {{/each}}
 </main>
 
 {{!-- add div id with {{exercise.routineId}} to queryseelct in exercise.js--}}
