--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
           <h2 id="routName">{{routine.routineName}}</h2>
         </div>
         <div id="routDesc">
-            <p>DESCRIPTION OF WORKOUT</p>
+            <p id="descEl">{{routine.description}}</p>
         </div>
       </div>
       </a>
