--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,12 @@ body {
 
   }
 
+  a {
+
+    text-decoration: none;
+
+  }
+
 header {
 
     display: flex;
@@ -294,6 +300,13 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
 
 }
 
+#descEl {
+
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 25px;
+
+}
+
 .wkHistSect {
 
     padding-top: 60px;
@@ -328,6 +341,28 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
   align-content: center;
   height: 920px;
 
+
+}
+
+#greatFin {
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+#greatWork {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #efefef;
+  box-shadow: 8px 8px 10px #b9512b, rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  border-radius: 10px;
+  width: 230px;
+  height: 100px;
 
 }
 
@@ -535,7 +570,7 @@ padding-top: 30px;
 
   }
   
-  #nextBtn:hover, #finishBtn:hover, #logout:hover, #loginBtn:hover, #signUpbtn:hover , .no-button:hover, #signUpNav:hover, #startBtn:hover, #stopBtn:hover, #homeBtn:hover {
+  #nextBtn:hover, #finishBtn:hover, #logout:hover, #loginBtn:hover, #signUpbtn:hover , .no-button:hover, #signUpNav:hover, #startBtn:hover, #stopBtn:hover, #homeBtn:hover, #finishBtnFinal:hover {
     box-shadow: #858585 0 3px 8px;
   }
 
