--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -30,7 +30,7 @@
       </div>
       <div id="timerFrame">
         <div class="timer">
-          {{ speak exercise.countdownDuration exercise.workoutName}}
+          {{ speak exercise.workoutName exercise.reps exercise.sets }}
           <div id="countDown">{{exercise.countdownDuration}}</div>
         </div>
       </div>
